--- a/1.numpy学习.ipynb
+++ b/1.numpy学习.ipynb
@@ -539,14 +539,16 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-08-18T14:16:16.243622Z",
-     "start_time": "2025-08-18T14:16:16.241082Z"
+     "end_time": "2025-08-20T15:52:55.488765Z",
+     "start_time": "2025-08-20T15:52:55.486007Z"
     }
    },
    "cell_type": "code",
    "source": [
     "# 指数间隔数列\n",
     "arr = np.logspace(0,4,2,base=2)\n",
+    "print(arr)\n",
+    "arr = np.logspace(0,4,3,base=2)\n",
     "print(arr)"
    ],
    "id": "31f5a29a115a4ace",
@@ -555,17 +557,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[ 1. 16.]\n"
+      "[ 1. 16.]\n",
+      "[ 1.  4. 16.]\n"
      ]
     }
    ],
-   "execution_count": 56
+   "execution_count": 222
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-08-18T14:25:41.550743Z",
-     "start_time": "2025-08-18T14:25:41.548329Z"
+     "end_time": "2025-08-20T15:52:35.723688Z",
+     "start_time": "2025-08-20T15:52:35.720119Z"
     }
    },
    "cell_type": "code",
@@ -587,7 +590,7 @@
      ]
     }
    ],
-   "execution_count": 58
+   "execution_count": 220
   },
   {
    "metadata": {
@@ -1318,11 +1321,583 @@
   },
   {
    "metadata": {},
+   "cell_type": "markdown",
+   "source": "## 2.统计函数\n",
+   "id": "aafaa50f36d1cfbc"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-08-20T14:37:10.094122Z",
+     "start_time": "2025-08-20T14:37:10.090940Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "# 求和、计算平均值、计算中位数、标准差、方差\n",
+    "# 查找最大值、最小值\n",
+    "# 计算分位数、累积和、累积差"
+   ],
+   "id": "9ed9f9d12b6fb52d",
+   "outputs": [],
+   "execution_count": 145
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-08-20T14:41:22.321566Z",
+     "start_time": "2025-08-20T14:41:22.319423Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "arr = np.random.randint(1,20,8)\n",
+    "print(arr)"
+   ],
+   "id": "b4d82cd4a8226e43",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "None\n"
+     ]
+    }
+   ],
+   "execution_count": 157
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-08-20T14:41:12.393392Z",
+     "start_time": "2025-08-20T14:41:12.391511Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "# 求和\n",
+    "print(np.sum(arr))"
+   ],
+   "id": "d76935faa99c8c12",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "78\n"
+     ]
+    }
+   ],
+   "execution_count": 154
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-08-20T14:41:12.905517Z",
+     "start_time": "2025-08-20T14:41:12.902200Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "# 计算平均值\n",
+    "print(np.mean(arr))"
+   ],
+   "id": "5d65a54b2ccb5375",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "9.75\n"
+     ]
+    }
+   ],
+   "execution_count": 155
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-08-20T14:44:14.606654Z",
+     "start_time": "2025-08-20T14:44:14.602632Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "# 计算中位数 奇数取中间 偶数取中间两个的平均值\n",
+    "print(np.median([1,4,2]))\n",
+    "print(np.median([1,1,1,1,1,1,1,100]))"
+   ],
+   "id": "c2769ca1673de98",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2.0\n",
+      "1.0\n"
+     ]
+    }
+   ],
+   "execution_count": 159
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-08-20T14:47:24.054154Z",
+     "start_time": "2025-08-20T14:47:24.051481Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "# 计算标准差和方差\n",
+    "print(np.var([1,2,3])) # 方差 sigma(平均值-x[i])^2 / n\n",
+    "print(np.std([1,2,3])) # 标准差 方差开平方"
+   ],
+   "id": "417eb21a7eaf3ab2",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.6666666666666666\n",
+      "0.816496580927726\n"
+     ]
+    }
+   ],
+   "execution_count": 162
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-08-20T14:52:48.439747Z",
+     "start_time": "2025-08-20T14:52:48.436597Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "# 计算最值\n",
+    "print(np.max([1,2,4,5]),np.argmax([1,2,4,5])) # arg打印索引\n",
+    "print(np.min([1,2,4,5]),np.argmin([1,2,4,5]))"
+   ],
+   "id": "69082ab928115bda",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5 3\n",
+      "1 0\n"
+     ]
+    }
+   ],
+   "execution_count": 166
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-08-20T15:10:07.069318Z",
+     "start_time": "2025-08-20T15:10:07.064769Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "# 分位数\n",
+    "print(np.percentile([1,2,4,5],50))\n",
+    "print(np.percentile([1,2,4,5],25)) # 0.25*3=0.75 1+0.75*(2-1)\n",
+    "print(np.percentile([1,2,4,8],75)) # 0.75*3=2.25 4+(2.25-2)*(5-4)"
+   ],
+   "id": "bd9487368f2c61c4",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3.0\n",
+      "1.75\n",
+      "5.0\n"
+     ]
+    }
+   ],
+   "execution_count": 175
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-08-20T15:13:26.837387Z",
+     "start_time": "2025-08-20T15:13:26.835242Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "# 累积和、累积积\n",
+    "arr = np.array([1,2,3])\n",
+    "print(np.sum(arr))\n",
+    "print(np.cumsum(arr)) # 1 1+2 1+2+3\n",
+    "print(np.cumprod(arr)) # 1 1*2 1*2*3"
+   ],
+   "id": "293a938c14b56a0",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6\n",
+      "[1 3 6]\n",
+      "[1 2 6]\n"
+     ]
+    }
+   ],
+   "execution_count": 179
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "## 3.比较函数\n",
+    "### 比较大小 逻辑运算 检查数组中是否包含true、是否所有都为true、自定义条件"
+   ],
+   "id": "b231151a1b54c7d6"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-08-20T15:17:45.167553Z",
+     "start_time": "2025-08-20T15:17:45.163753Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "# 大于\n",
+    "print(np.greater([2,3,4,5,6],4))\n",
+    "print(np.greater_equal([2,3,4,5,6],4))\n",
+    "# 小于\n",
+    "print(np.less([2,3,4,5,6],4))\n",
+    "# 等于\n",
+    "print(np.equal([2,3,4,5,6],4))\n",
+    "print(np.equal([2,3,4],[3,4,5]))"
+   ],
+   "id": "579a0bdd3bb23b30",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[False False False  True  True]\n",
+      "[False False  True  True  True]\n",
+      "[ True  True False False False]\n",
+      "[False False  True False False]\n",
+      "[False False False]\n"
+     ]
+    }
+   ],
+   "execution_count": 183
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-08-20T15:22:08.778711Z",
+     "start_time": "2025-08-20T15:22:08.774869Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "# 逻辑运算\n",
+    "print(np.logical_or([1,0,1],[1,1,1]))\n",
+    "print(np.logical_and([1,0,1],[1,1,1]))\n",
+    "print(np.logical_not([1,0,1]))"
+   ],
+   "id": "a1e85a7aea1d56ad",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ True  True  True]\n",
+      "[ True False  True]\n",
+      "[False  True False]\n"
+     ]
+    }
+   ],
+   "execution_count": 186
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-08-20T15:23:53.383913Z",
+     "start_time": "2025-08-20T15:23:53.381904Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "# 检查元素是否包含true\n",
+    "print(np.any([0,1,0]))\n",
+    "# 检查元素是否全部true\n",
+    "print(np.all([0,0,0]))"
+   ],
+   "id": "9e447daa831814f1",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "False\n"
+     ]
+    }
+   ],
+   "execution_count": 189
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-08-20T15:27:03.177277Z",
+     "start_time": "2025-08-20T15:27:03.175033Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "# 自定义条件 np.where(条件，符合条件，不符合条件)\n",
+    "arr = np.array([1,2,3,4,5])\n",
+    "print(np.where(arr>3,arr,0))\n",
+    "print(np.where(arr>3,1,0))"
+   ],
+   "id": "64ed234e9f71b548",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0 0 0 4 5]\n",
+      "[0 0 0 1 1]\n"
+     ]
+    }
+   ],
+   "execution_count": 191
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-08-20T15:28:59.663745Z",
+     "start_time": "2025-08-20T15:28:59.659271Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "score = np.random.randint(1,100,20)\n",
+    "print(score)\n",
+    "print(np.where(score>=60,'及格','不及格'))"
+   ],
+   "id": "b861d8977e5b0861",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[30 35 83 43 47 52 22 71 67 19 46 31 32 29 14 87 10 43 83 52]\n",
+      "['不及格' '不及格' '及格' '不及格' '不及格' '不及格' '不及格' '及格' '及格' '不及格' '不及格' '不及格'\n",
+      " '不及格' '不及格' '不及格' '及格' '不及格' '不及格' '及格' '不及格']\n"
+     ]
+    }
+   ],
+   "execution_count": 194
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-08-20T15:30:03.494723Z",
+     "start_time": "2025-08-20T15:30:03.491996Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "print(np.where(score<60,'不及格',np.where(score<80,'良好','优秀')))",
+   "id": "b0365e4a18f001d0",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['不及格' '不及格' '优秀' '不及格' '不及格' '不及格' '不及格' '良好' '良好' '不及格' '不及格' '不及格'\n",
+      " '不及格' '不及格' '不及格' '优秀' '不及格' '不及格' '优秀' '不及格']\n"
+     ]
+    }
+   ],
+   "execution_count": 195
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-08-20T15:33:54.936903Z",
+     "start_time": "2025-08-20T15:33:54.933056Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "# np.select(条件，结果)\n",
+    "print(np.select([score<60,(score>60) & (score<=80),score>80],['不及格','良好','优秀'],default='未知'))"
+   ],
+   "id": "4ac4ec79150ff932",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['不及格' '不及格' '优秀' '不及格' '不及格' '不及格' '不及格' '良好' '良好' '不及格' '不及格' '不及格'\n",
+      " '不及格' '不及格' '不及格' '优秀' '不及格' '不及格' '优秀' '不及格']\n"
+     ]
+    }
+   ],
+   "execution_count": 198
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-08-20T15:42:31.840715Z",
+     "start_time": "2025-08-20T15:42:31.837082Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "# 排序函数\n",
+    "np.random.seed(0)\n",
+    "arr = np.random.randint(1,100,20)\n",
+    "print(arr)\n",
+    "# arr.sort() # 原地排序\n",
+    "# print(arr)\n",
+    "print(np.sort(arr))\n",
+    "print(np.argsort(arr)) # 打印索引"
+   ],
+   "id": "6eb7baf7d2752bfa",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[45 48 65 68 68 10 84 22 37 88 71 89 89 13 59 66 40 88 47 89]\n",
+      "[10 13 22 37 40 45 47 48 59 65 66 68 68 71 84 88 88 89 89 89]\n",
+      "[ 5 13  7  8 16  0 18  1 14  2 15  3  4 10  6 17  9 11 12 19]\n"
+     ]
+    }
+   ],
+   "execution_count": 204
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-08-20T15:43:22.873942Z",
+     "start_time": "2025-08-20T15:43:22.870956Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "# 去重\n",
+    "print(np.unique(arr))\n",
+    "print(np.unique(arr).size)"
+   ],
+   "id": "cc8f08f499ee9ea3",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[10 13 22 37 40 45 47 48 59 65 66 68 71 84 88 89]\n",
+      "16\n"
+     ]
+    }
+   ],
+   "execution_count": 206
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-08-20T15:44:42.343198Z",
+     "start_time": "2025-08-20T15:44:42.339723Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "# 数组拼接\n",
+    "arr1 = np.array([1,2,3])\n",
+    "arr2 = np.array([4,5,6])\n",
+    "print(np.concat((arr1,arr2)))"
+   ],
+   "id": "d347373a33f03ae",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1 2 3 4 5 6]\n"
+     ]
+    }
+   ],
+   "execution_count": 212
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-08-20T15:46:16.140383Z",
+     "start_time": "2025-08-20T15:46:16.136159Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "# 数组分割\n",
+    "np.split(arr,4)\n",
+    "np.split(arr,[6,12,18])"
+   ],
+   "id": "27c4b97fb58d48c7",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[array([45, 48, 65, 68, 68, 10]),\n",
+       " array([84, 22, 37, 88, 71, 89]),\n",
+       " array([89, 13, 59, 66, 40, 88]),\n",
+       " array([47, 89])]"
+      ]
+     },
+     "execution_count": 214,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 214
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-08-20T15:48:19.919487Z",
+     "start_time": "2025-08-20T15:48:19.917450Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "# 调整数组形状\n",
+    "print(np.reshape(arr,(5,4))) # 元素个数要和形状匹配上"
+   ],
+   "id": "e47005363f4b90c",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[45 48 65 68]\n",
+      " [68 10 84 22]\n",
+      " [37 88 71 89]\n",
+      " [89 13 59 66]\n",
+      " [40 88 47 89]]\n"
+     ]
+    }
+   ],
+   "execution_count": 218
+  },
+  {
+   "metadata": {},
    "cell_type": "code",
    "outputs": [],
    "execution_count": null,
    "source": "",
-   "id": "cf9f56b6db34202a"
+   "id": "40b9bdf781b0dad2"
   }
  ],
  "metadata": {
